--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@ body {
     padding-top: 50px;
 }
 .titulo {
+    height: 150px;
+    overflow-y: hidden;
     padding-left: 20px;
     padding-right: 20px;
     border: 1px solid #aaa;
