Cores da bandeira de Pato Branco no app; outro ícone para o launcher; consulta das gcm key a partir do banco de dados

--- a/app/client/Up/app/src/main/res/layout/nav_header_acompanhar.xml
+++ b/app/client/Up/app/src/main/res/layout/nav_header_acompanhar.xml
@@ -15,6 +15,7 @@
         android:id="@+id/txtDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000"
         android:text="Câmera Municipal de Pato Branco"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
